[tool.poetry]
name = "search_embeddings"
version = "0.1.0"
description = "Example Kolena dataset embeddings extraction logic"
authors = ["Kolena Engineering <eng@kolena.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
kolena = "^1.9.0"
s3fs = "^2023.5.0"
kolena-embeddings = {version = "^0.6.0", source = "kolena-embeddings"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"

[[tool.poetry.source]]
name = "kolena-embeddings"
url = "https://gateway.kolena.cloud/repositories"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
