[project]
name = "search_embeddings"
version = "0.1.0"
description = "Example Kolena dataset embeddings extraction logic"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
license = "Apache-2.0"
requires-python = ">=3.8,<3.12"

dependencies = [
    "kolena>=1.23.0,<2",
    "s3fs>=2023.5.0,<2024",
    "numpy>=1.19,<2",
    "kolena-embeddings >= 0.6.0 @ https://gateway.kolena.cloud/repositories",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true # to allow the syntax 'pkg @ url' in dependencies
