[project]
name = "semantic_segmentation"
version = "0.1.0"
description = "Kolena Datasets Example integration for semantic segmentation"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
license = "Apache-2.0"
requires-python = ">=3.8,<3.12"

dependencies = [
    "kolena>=1.23.0,<2",
    "s3fs>=2023.5.0,<2024",
    "fsspec>=2023.5.0,<2024",
    "opencv-python-headless>=4.6.0.66,<4.7",
    "boto3>=1.25,<2",
    "scikit-learn>=1.1.2,<2",
    "scikit-image>=0.19.3,<1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
