[tool.poetry]
name = "semantic_textual_similarity"
version = "0.1.0"
description = "Example Kolena integration for semantic textual similarity"
authors = ["Kolena Engineering <eng@kolena.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
kolena = "^1.23.0"
s3fs = "^2024.9.0"
fsspec = "^2024.9.0"
numpy = "^1.19"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
