[tool.poetry]
name = "speaker-diarization"
version = "0.1.0"
description = "Example Kolena integration for speaker diarization"
authors = ["Kolena Engineering <eng@kolena.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
kolena = "^1.9.0"
pyannote-metrics = "^3.2.1"
s3fs = "^2023.10.0"
pyannote-core = "^5.0.0"
scipy = "^1.11.3"
jiwer = "^3.0.3"
numpy = "^1.19"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
