[project]
name = "speaker-diarization"
version = "0.1.0"
description = "Example Kolena integration for speaker diarization"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
license = "Apache-2.0"
requires-python = ">=3.9,<3.12"

dependencies = [
    "kolena>=1.23.0,<2",
    "s3fs>=2023.10.0,<2024",
    "numpy>=1.19,<2",
    "pyannote-metrics>=3.2.1,<4",
    "pyannote-core>=5.0.0,<6",
    "jiwer>=3.0.3,<4",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
