[project]
name = "text_summarization"
version = "0.1.0"
description = "Example Kolena integration for text summarization"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
license = "Apache-2.0"
requires-python = ">=3.8,<3.12"

dependencies = [
    "kolena>=1.23.0,<2",
    "s3fs>=2023.5.0,<2024",
    "numpy>=1.19,<2",
    "scikit-learn>=1.1.2,<2",
    "numba>=0.56.0,<1",
    "opencv-python-headless>=4.6.0,<5",
    "evaluate>=0.4.0,<1",
    "bert-score>=0.3.13,<1",
    "absl-py>=1.4.0,<2",
    "nltk>=3.8.1,<4",
    "rouge-score>=0.1.2,<1",
    "sacrebleu>=2.3.1,<3",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# TODO Remove after validating that everything else works for CI
# Transient dependency of `bert-score` -- pin to CPU-only to unbreak CI. This can be safely removed on GPU systems
# Further reading: https://github.com/python-poetry/poetry/issues/6409#issuecomment-1310655479
# torch = [
#   {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://download.pytorch.org/whl/cpu/torch-2.1.2-cp39-none-macosx_11_0_arm64.whl"},
#   {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", url = "https://download.pytorch.org/whl/cpu/torch-2.1.2-cp39-none-macosx_10_9_x86_64.whl"},
#   {markers = "sys_platform != 'darwin'", version = "2.1.2", source = "torch+cpu"}
# ]
#
# [[tool.poetry.source]]
# name = "torch+cpu"
# url = "https://download.pytorch.org/whl/cpu"
# priority = "explicit"
