[project]
name = "text_summarization"
version = "0.1.0"
description = "Example Kolena integration for text summarization"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
license = "Apache-2.0"
requires-python = ">=3.8,<3.12"

dependencies = [
    "kolena>=1.23.0,<2",
    "s3fs>=2023.5.0,<2024",
    "numpy>=1.19,<2",
    "scikit-learn>=1.1.2,<2",
    "numba>=0.56.0,<1",
    "opencv-python-headless>=4.6.0,<5",
    "evaluate>=0.4.0,<1",
    "bert-score>=0.3.13,<1",
    "absl-py>=1.4.0,<2",
    "nltk>=3.8.1,<4",
    "rouge-score>=0.1.2,<1",
    "sacrebleu>=2.3.1,<3",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
